@@ -1,6 +1,10 @@
 The following is a list of stuff that needs to be implemented in
 yanoid before the game can be considered ready for the contest. 
 
+Bugs:
+
+- pop sound kills music???
+
 **********************************************************************
 ** SHOWSTOPPERS - MUST BE FIXED
 
