@@ -23,17 +23,21 @@
 #include "entity.hh"
 #include "pixmap_entity.hh"
 #include "more_entities.hh"
+#include "musicmanager.hh"
 /* **********************************************************************
  * TBrick
  * *********************************************************************/
 TBrick::TBrick(int x_, int y_, string pixmap, string hitfunction)
   : TPixmapEntity(x_, y_, 0, pixmap) {
   SetScriptHitCall(hitfunction);
+  /* This _must_ go */
+  HitSound = MusicManager->RequireRessource("sounds/pop.wav");
 };
 /* **********************************************************************
  * ~TBrick
  * *********************************************************************/
 TBrick::~TBrick() {
+  MusicManager->ReleaseRessource(HitSound);
 };
 
 /* **********************************************************************
@@ -42,6 +46,7 @@ TBrick::~TBrick() {
 void TBrick::OnCollision(TEntity& other, Uint32 currenttime=0) {
   removable = true;
   TPixmapEntity::OnCollision(other, currenttime);
+  Mix_PlayMusic(HitSound, 0);
 }
 
 
