@@ -4,6 +4,7 @@
 	Made the game change maps, when a map is completed
 	Updated the TODO file
 	Tagged version 0.0.10
+	Started adding sounds to events.
 
 2001-11-16  Mads Bondo Dydensborg  <madsdyd@mother>
 
